# storage/api-docs/api-docs.json
@@ -433,6 +433,36 @@
                 }
             }
         },
+        "/menu/selectMenu": {
+            "get": {
+                "tags": [
+                    "GET MENU"
+                ],
+                "summary": "Get List Menu",
+                "description": "All Menu",
+                "operationId": "getAllMenu",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
+        },
         "/menu/insertMenu": {
             "post": {
                 "tags": [
